[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/Commando.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/ProgressBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/checkbox_checked.png" type="Texture" id=4]
[ext_resource path="res://assets/checkbox.png" type="Texture" id=5]
[ext_resource path="res://assets/inputs/keyboard-button.png" type="Texture" id=6]
[ext_resource path="res://assets/inputs/joy-button-a.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/consola.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/MenuControlsHighlight.tres" type="StyleBox" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 90
font_data = ExtResource( 8 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 3 )

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 472.0
margin_right = 1146.0
margin_bottom = 818.0
rect_pivot_offset = Vector2( -970, 0 )
focus_mode = 2

[node name="StartGame" type="Button" parent="MainMenu"]
margin_right = 1066.0
margin_bottom = 50.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Start game"
flat = true
align = 0

[node name="Settings" type="Button" parent="MainMenu"]
margin_top = 54.0
margin_right = 1066.0
margin_bottom = 104.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Settings"
flat = true
align = 0

[node name="Exit" type="Button" parent="MainMenu"]
margin_top = 108.0
margin_right = 1066.0
margin_bottom = 158.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Exit"
flat = true
align = 0

[node name="SettingsMenu" type="VBoxContainer" parent="."]
visible = false
margin_left = 80.0
margin_top = 176.0
margin_right = 1119.0
margin_bottom = 795.0
rect_pivot_offset = Vector2( -970, 0 )

[node name="Back" type="Button" parent="SettingsMenu"]
margin_right = 1039.0
margin_bottom = 50.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Back"
flat = true
align = 0

[node name="Controls" type="Button" parent="SettingsMenu"]
margin_top = 54.0
margin_right = 1039.0
margin_bottom = 104.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Controls"
flat = true
align = 0

[node name="master_volume" type="Button" parent="SettingsMenu"]
margin_top = 108.0
margin_right = 1039.0
margin_bottom = 158.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Master volume"
flat = true
align = 0

[node name="ProgressBar" parent="SettingsMenu/master_volume" instance=ExtResource( 2 )]
light_mask = 4
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 630.0
margin_top = -2.0
margin_right = 1027.0
margin_bottom = 29.0
min_value = -60.0
increase_decrease_step = 5.0

[node name="music_volume" type="Button" parent="SettingsMenu"]
margin_top = 162.0
margin_right = 1039.0
margin_bottom = 212.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Music volume"
flat = true
align = 0

[node name="ProgressBar" parent="SettingsMenu/music_volume" instance=ExtResource( 2 )]
show_behind_parent = true
light_mask = 2
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 630.0
margin_top = -2.0
margin_right = 1027.0
margin_bottom = 29.0
min_value = -60.0
increase_decrease_step = 5.0

[node name="sounds_volume" type="Button" parent="SettingsMenu"]
margin_top = 216.0
margin_right = 1039.0
margin_bottom = 266.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Sounds volume"
flat = true
align = 0

[node name="ProgressBar" parent="SettingsMenu/sounds_volume" instance=ExtResource( 2 )]
show_behind_parent = true
light_mask = 0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 630.0
margin_top = -2.0
margin_right = 1027.0
margin_bottom = 29.0
min_value = -60.0
increase_decrease_step = 5.0

[node name="fullscreen" type="Button" parent="SettingsMenu"]
margin_top = 270.0
margin_right = 1039.0
margin_bottom = 320.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Fullscreen"
flat = true
align = 0

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/fullscreen"]
light_mask = 0
margin_left = 626.0
margin_top = -4.0
margin_right = 834.0
margin_bottom = 204.0
rect_scale = Vector2( 0.23, 0.23 )
custom_icons/checked = ExtResource( 4 )
custom_icons/unchecked = ExtResource( 5 )

[node name="show_ghost" type="Button" parent="SettingsMenu"]
margin_top = 324.0
margin_right = 1039.0
margin_bottom = 374.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Display ghost"
flat = true
align = 0

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/show_ghost"]
margin_left = 626.0
margin_top = -4.0
margin_right = 834.0
margin_bottom = 204.0
rect_scale = Vector2( 0.23, 0.23 )
custom_icons/checked = ExtResource( 4 )
custom_icons/unchecked = ExtResource( 5 )

[node name="ControlsMenu" type="VBoxContainer" parent="."]
visible = false
margin_left = 80.0
margin_top = 176.0
margin_right = 1989.0
margin_bottom = 860.0
rect_pivot_offset = Vector2( -970, 0 )

[node name="Back" type="Button" parent="ControlsMenu"]
margin_right = 1909.0
margin_bottom = 50.0
custom_colors/font_color_focus = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Back"
flat = true
align = 0

[node name="Spacing" type="Label" parent="ControlsMenu"]
margin_top = 54.0
margin_right = 1909.0
margin_bottom = 68.0

[node name="Inputs" type="GridContainer" parent="ControlsMenu"]
margin_top = 72.0
margin_right = 1909.0
margin_bottom = 566.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 31

[node name="move_left" type="Label" parent="ControlsMenu/Inputs"]
margin_right = 281.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Move left"

[node name="keyboard" type="Button" parent="ControlsMenu/Inputs/move_left"]
margin_left = 511.0
margin_top = -19.0
margin_right = 1107.0
margin_bottom = 115.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.00784314, 0.976471, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = ExtResource( 9 )
text = "â†‘"
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="joy_button" type="Button" parent="ControlsMenu/Inputs/move_left"]
margin_left = 790.0
margin_top = -16.0
margin_right = 1402.0
margin_bottom = 118.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = ExtResource( 9 )
icon = ExtResource( 7 )
flat = true
align = 0
icon_align = 1

[node name="move_right" type="Label" parent="ControlsMenu/Inputs"]
margin_top = 75.0
margin_right = 281.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "Move right"

[node name="keyboard" type="Button" parent="ControlsMenu/Inputs/move_right"]
margin_left = 511.0
margin_top = -17.0
margin_right = 1107.0
margin_bottom = 117.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.00784314, 0.976471, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = ExtResource( 9 )
text = "K"
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="joy_button" type="Button" parent="ControlsMenu/Inputs/move_right"]
margin_left = 790.0
margin_top = -14.0
margin_right = 1402.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = ExtResource( 9 )
icon = ExtResource( 7 )
flat = true
align = 0
icon_align = 1

[node name="move_down" type="Label" parent="ControlsMenu/Inputs"]
margin_top = 150.0
margin_right = 281.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 1 )
text = "Move down"

[node name="keyboard" type="Button" parent="ControlsMenu/Inputs/move_down"]
margin_left = 511.0
margin_top = -17.0
margin_right = 1107.0
margin_bottom = 117.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.00784314, 0.976471, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = ExtResource( 9 )
text = "K"
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="joy_button" type="Button" parent="ControlsMenu/Inputs/move_down"]
margin_left = 790.0
margin_top = -14.0
margin_right = 1402.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = ExtResource( 9 )
icon = ExtResource( 7 )
flat = true
align = 0
icon_align = 1

[node name="rotate_left" type="Label" parent="ControlsMenu/Inputs"]
margin_top = 225.0
margin_right = 281.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 1 )
text = "Rotate left"

[node name="keyboard" type="Button" parent="ControlsMenu/Inputs/rotate_left"]
margin_left = 511.0
margin_top = -17.0
margin_right = 1107.0
margin_bottom = 117.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.00784314, 0.976471, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = ExtResource( 9 )
text = "K"
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="joy_button" type="Button" parent="ControlsMenu/Inputs/rotate_left"]
margin_left = 790.0
margin_top = -14.0
margin_right = 1402.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = ExtResource( 9 )
icon = ExtResource( 7 )
flat = true
align = 0
icon_align = 1

[node name="rotate_right" type="Label" parent="ControlsMenu/Inputs"]
margin_top = 300.0
margin_right = 281.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 1 )
text = "Rotate right"

[node name="keyboard" type="Button" parent="ControlsMenu/Inputs/rotate_right"]
margin_left = 511.0
margin_top = -17.0
margin_right = 1107.0
margin_bottom = 117.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.00784314, 0.976471, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = ExtResource( 9 )
text = "K"
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="joy_button" type="Button" parent="ControlsMenu/Inputs/rotate_right"]
margin_left = 790.0
margin_top = -14.0
margin_right = 1402.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = ExtResource( 9 )
icon = ExtResource( 7 )
flat = true
align = 0
icon_align = 1

[node name="drop" type="Label" parent="ControlsMenu/Inputs"]
margin_top = 375.0
margin_right = 281.0
margin_bottom = 419.0
custom_fonts/font = SubResource( 1 )
text = "Drop"

[node name="keyboard" type="Button" parent="ControlsMenu/Inputs/drop"]
margin_left = 511.0
margin_top = -17.0
margin_right = 1107.0
margin_bottom = 117.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.00784314, 0.976471, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = ExtResource( 9 )
text = "K"
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="joy_button" type="Button" parent="ControlsMenu/Inputs/drop"]
margin_left = 790.0
margin_top = -14.0
margin_right = 1402.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = ExtResource( 9 )
icon = ExtResource( 7 )
flat = true
align = 0
icon_align = 1

[node name="hold" type="Label" parent="ControlsMenu/Inputs"]
margin_top = 450.0
margin_right = 281.0
margin_bottom = 494.0
custom_fonts/font = SubResource( 1 )
text = "Hold"

[node name="keyboard" type="Button" parent="ControlsMenu/Inputs/hold"]
margin_left = 511.0
margin_top = -17.0
margin_right = 1107.0
margin_bottom = 117.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.00784314, 0.976471, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = ExtResource( 9 )
text = "K"
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="joy_button" type="Button" parent="ControlsMenu/Inputs/hold"]
margin_left = 790.0
margin_top = -14.0
margin_right = 1402.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = ExtResource( 9 )
icon = ExtResource( 7 )
flat = true
align = 0
icon_align = 1

[node name="ControlsWaitingInputPopup" type="ColorRect" parent="."]
visible = false
margin_left = 710.0
margin_top = 389.0
margin_right = 1210.0
margin_bottom = 689.0
color = Color( 0, 0, 0, 0.858824 )

[node name="label" type="Label" parent="ControlsWaitingInputPopup"]
margin_left = 2.0
margin_top = 6.0
margin_right = 502.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 1 )
text = "Press any
button"
align = 1
valign = 1

[connection signal="pressed" from="MainMenu/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="SettingsMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="SettingsMenu/Controls" to="." method="_on_Controls_pressed"]
[connection signal="gui_input" from="SettingsMenu/master_volume" to="." method="_on_menu_option_gui_input"]
[connection signal="value_changed" from="SettingsMenu/master_volume/ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="gui_input" from="SettingsMenu/music_volume" to="." method="_on_menu_option_gui_input"]
[connection signal="value_changed" from="SettingsMenu/music_volume/ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="gui_input" from="SettingsMenu/sounds_volume" to="." method="_on_menu_option_gui_input"]
[connection signal="value_changed" from="SettingsMenu/sounds_volume/ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="gui_input" from="SettingsMenu/fullscreen" to="." method="_on_menu_option_gui_input"]
[connection signal="toggled" from="SettingsMenu/fullscreen/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="gui_input" from="SettingsMenu/show_ghost" to="." method="_on_menu_option_gui_input"]
[connection signal="toggled" from="SettingsMenu/show_ghost/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="ControlsMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/move_left/keyboard" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/move_left/keyboard" to="." method="_on_keyboard_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/move_left/joy_button" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/move_left/joy_button" to="." method="_on_joy_button_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/move_right/keyboard" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/move_right/keyboard" to="." method="_on_keyboard_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/move_right/joy_button" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/move_right/joy_button" to="." method="_on_joy_button_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/move_down/keyboard" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/move_down/keyboard" to="." method="_on_keyboard_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/move_down/joy_button" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/move_down/joy_button" to="." method="_on_joy_button_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/rotate_left/keyboard" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/rotate_left/keyboard" to="." method="_on_keyboard_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/rotate_left/joy_button" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/rotate_left/joy_button" to="." method="_on_joy_button_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/rotate_right/keyboard" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/rotate_right/keyboard" to="." method="_on_keyboard_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/rotate_right/joy_button" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/rotate_right/joy_button" to="." method="_on_joy_button_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/drop/keyboard" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/drop/keyboard" to="." method="_on_keyboard_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/drop/joy_button" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/drop/joy_button" to="." method="_on_joy_button_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/hold/keyboard" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/hold/keyboard" to="." method="_on_keyboard_bind_pressed"]
[connection signal="gui_input" from="ControlsMenu/Inputs/hold/joy_button" to="." method="_on_controls_input"]
[connection signal="pressed" from="ControlsMenu/Inputs/hold/joy_button" to="." method="_on_joy_button_bind_pressed"]
